--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <table cellspacing="20">
-        <td><img src="/images/bruce.jpg" alt="photo of bruce"></td>
+        <td><img src="images/bruce.jpg" alt="photo of bruce"></td>
         <td>
             <h2>Bruce Willis</h2>
             <p>Уолтър Брус Уилис (на английски: Walter Bruce Willis) е американски актьор, продуцент и певец, носител на награди „Златен глобус“, „Златна камера“, „Изборът на публиката“ и две награди „Еми“, номиниран е за четири награди „Сатурн“.[1] Известни филми с негово участие са „Умирай трудно“, „Умирай трудно 2“, „Последният бойскаут“, „Криминале“, „Петият елемент“, „Армагедон“, „Шесто чувство“, „Град на греха“, „Looper: Убиец във времето“, сериалите „Съдружници по неволя“, „Приятели“ и други.</p>
